# hydro

./: Cargo.toml  LICENSE  README.md
src/: favorites.rs  lib.rs  main.rs  scraping.rs
~/.config/hydro/: favorites.json
