[package]
name = "hydro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
cli-table = "0.4.7"
easy-scraper = "0.2.0"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.96"
